# autograder

./: .gitignore  README.md
.github/workflows/: client-ci.yml  server-ci.yml
client-src/: README.md  pyproject.toml
client-src/src/: autograder_client.py
client-src/tests/: test-api.py
server-src/: Dockerfile  README.md  compose.yml  manage.py  requirements.txt
server-src/AutoGrader/: asgi.py  settings.py  urls.py  wsgi.py
server-src/grader/: admin.py  models.py  urls.py  views.py
server-src/grader/migrations/: 0001_initial.py  0002_alter_testfunction_allowed_libraries.py  0003_alter_assignment_name_and_more.py
server-src/grader/templates/grader/: index.html
